[gd_scene load_steps=13 format=3 uid="uid://biekuv7dddk3m"]

[ext_resource type="Script" path="res://GameEditor.gd" id="1_xc5ik"]
[ext_resource type="Theme" uid="uid://c4m6lidwyxgc" path="res://resources/UITheme.tres" id="2_clsah"]
[ext_resource type="Theme" uid="uid://bfwpaonloeco5" path="res://resources/theme.tres" id="3_jw58j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpxmc"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 1)
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 16

[sub_resource type="ButtonGroup" id="ButtonGroup_ktqn5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_fv0u6"]

[sub_resource type="ImageTexture" id="ImageTexture_vsyyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exhwh"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tv32c"]
bg_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ychv2"]
font_color = Color(0.45098, 0.45098, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61g4f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="FontVariation" id="FontVariation_5ifx6"]
spacing_top = 6
spacing_bottom = 6

[node name="GameEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xc5ik")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tpxmc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="System" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/System"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="CreationDate" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/System/Grid"]
layout_mode = 2
text = "Creation Date"

[node name="CreationDateText" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/System/Grid"]
layout_mode = 2

[node name="Version" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/System/Grid"]
layout_mode = 2
text = "Version
"

[node name="VersionText" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/System/Grid"]
layout_mode = 2

[node name="Basic" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="LobbyName" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Lobby Name"

[node name="LobbyNameText" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Password" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Password (Optional)"

[node name="PasswordText" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank for no password"

[node name="NumPlayers" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Number of Players"

[node name="NumPlayersButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="2" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "2"

[node name="3" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "3"

[node name="4" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "4"

[node name="5" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "5"

[node name="6" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "6"

[node name="7" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "7"

[node name="8" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "8"

[node name="9" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "9"

[node name="10" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/NumPlayersButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_ktqn5")
text = "10"

[node name="SimulationTimescale" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Simulation Timescale"

[node name="SimulationTimescaleButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="days" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SimulationTimescaleButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_fv0u6")
text = "Days"

[node name="hours" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SimulationTimescaleButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_fv0u6")
text = "Hours"

[node name="minutes" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SimulationTimescaleButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_group = SubResource("ButtonGroup_fv0u6")
text = "Minutes"

[node name="ActiveHours" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Active Hours"

[node name="ActiveHoursRows" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2

[node name="ActiveHoursButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="0" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "12 AM"

[node name="1" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "1"

[node name="2" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "2"

[node name="3" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "3"

[node name="4" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "4 AM"

[node name="5" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "5"

[node name="6" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "6"

[node name="7" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "7"

[node name="8" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "8 AM"

[node name="9" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "9"

[node name="10" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "10"

[node name="11" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "11"

[node name="ActiveHoursButtons2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="12" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "12 PM"

[node name="13" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "1"

[node name="14" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "2"

[node name="15" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "3"

[node name="16" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "4 PM"

[node name="17" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "5"

[node name="18" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "6"

[node name="19" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "7"

[node name="20" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "8 PM"

[node name="21" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "9"

[node name="22" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "10"

[node name="23" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/ActiveHoursRows/ActiveHoursButtons2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_clsah")
toggle_mode = true
button_pressed = true
text = "11"

[node name="Speed" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Simulation Speed"

[node name="SpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_jw58j")
theme_override_icons/grabber = SubResource("ImageTexture_vsyyl")
theme_override_styles/slider = SubResource("StyleBoxFlat_exhwh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_tv32c")
min_value = 0.5
max_value = 2.0
step = 0.0
value = 1.0
exp_edit = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SpeedSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SpeedSlider/MarginContainer"]
layout_mode = 2

[node name="Slow" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SpeedSlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slow (0.5x)"
label_settings = SubResource("LabelSettings_ychv2")

[node name="Fast" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/SpeedSlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fast (2x)"
label_settings = SubResource("LabelSettings_ychv2")
horizontal_alignment = 2

[node name="Rating" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
text = "Minimum Rating"

[node name="RatingSlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_jw58j")
max_value = 3000.0
step = 100.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/RatingSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/RatingSlider/MarginContainer"]
layout_mode = 2

[node name="Low" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/RatingSlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "500"
label_settings = SubResource("LabelSettings_ychv2")

[node name="High" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic/Grid/RatingSlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "2000"
label_settings = SubResource("LabelSettings_ychv2")
horizontal_alignment = 2

[node name="Editable" type="Panel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Basic"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61g4f")

[node name="AdvancedButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jw58j")
text = "Advanced"

[node name="Advanced" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="OutpostDensity" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid"]
layout_mode = 2
text = "Outpost Density"

[node name="DensitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_jw58j")
theme_override_icons/grabber = SubResource("ImageTexture_vsyyl")
theme_override_styles/slider = SubResource("StyleBoxFlat_exhwh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_tv32c")
min_value = 0.5
max_value = 2.0
step = 0.0
value = 1.0
exp_edit = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/DensitySlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/DensitySlider/MarginContainer"]
layout_mode = 2

[node name="Low" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/DensitySlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Low"
label_settings = SubResource("LabelSettings_ychv2")

[node name="High" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/DensitySlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "High"
label_settings = SubResource("LabelSettings_ychv2")
horizontal_alignment = 2

[node name="Factory Concentration" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid"]
layout_mode = 2
text = "Factory Concentration"

[node name="FactorySlider" type="HSlider" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_jw58j")
theme_override_icons/grabber = SubResource("ImageTexture_vsyyl")
theme_override_styles/slider = SubResource("StyleBoxFlat_exhwh")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_tv32c")
min_value = 0.5
max_value = 2.0
step = 0.0
value = 1.0
exp_edit = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/FactorySlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/FactorySlider/MarginContainer"]
layout_mode = 2

[node name="Low" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/FactorySlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "20%"
label_settings = SubResource("LabelSettings_ychv2")

[node name="High" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced/Grid/FactorySlider/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "80%"
label_settings = SubResource("LabelSettings_ychv2")
horizontal_alignment = 2

[node name="Editable" type="Panel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/Advanced"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61g4f")

[node name="Players" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Players"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Players/MarginContainer"]
layout_mode = 2

[node name="Players" type="Label" parent="MarginContainer/VBoxContainer/Players/MarginContainer/PlayerList"]
layout_mode = 2
text = "Players"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/Players/MarginContainer/PlayerList"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Passworded" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Password" type="Label" parent="MarginContainer/VBoxContainer/Passworded"]
layout_mode = 2
text = "Password"

[node name="PasswordText" type="LineEdit" parent="MarginContainer/VBoxContainer/Passworded"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Password Here!"

[node name="Create" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_clsah")
theme_override_fonts/font = SubResource("FontVariation_5ifx6")
theme_override_font_sizes/font_size = 25
text = "Create"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AdvancedButton" to="." method="_on_advanced_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Create" to="." method="_on_create_toggled"]
